# crypto-proj1-rs

./: .clippy.toml  .gitignore  Cargo.toml
src/: algo.rs  encryption.rs  lib.rs  main.rs  metrics.rs  plaintext.rs  utils.rs
src/algo/: disproof_stats.rs  disproof_table.rs
