[package]
name = "crypto-proj1-rs"
version = "0.1.0"
edition = "2021"
default-run = "main_function"

[[bin]]
name = "main_function"
path = "src/main.rs"

[[bin]]
name = "encryption-example"
path = "src/bin/encryption-example.rs"

[[bin]]
name = "test-decryption"
path = "src/bin/test-decryption.rs"

[features]
metrics = ["dep:once_cell"]

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.release_assert]
inherits = "release"
debug-assertions = true

[dependencies]
rand = "0.8.5"
bytecount = "0.6.7"
once_cell = { version = "1.19.0", optional = true }
