[package]
name = "crypto-proj1-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
